car truck merge, semaphore cleanup (unfinished)

--- a/todo
+++ b/todo
@@ -1,9 +1,8 @@
 comment code
-main process wait for all to end, free shared
-mutexes
-
-
-function vehicle with enum car/truck?
+doxygen
+readme update
+ferry finish
+test sync fix
 
 
 add name
